fix(provider/kafka): fix resource KafkaPrincipalAuthorizationList resource (#496)
fix: #496